adding pictures and text

--- a/projects.html
+++ b/projects.html
@@ -27,19 +27,21 @@
     <title>Projects</title>
   </head>
   <body>
-    <div class="about-section container m-t-">
-      <div class="row mb-6">
-        <div class="col-sm-5 d-lg-block">
+    <div class="about-section container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
           <img
             src="image/YogurtProject.jpeg"
-            class="img-fluid w-50 pe-auto rounded-2"
+            class="img-thumbnail w-50 pe-auto rounded-2 mb-5"
             alt="YogurtProject"
           />
+          <br />
+          <br />
         </div>
-        <div class="col-sm-6">
+        <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-1">Yogurt Project</h2>
-            <p class="mb-5 text-lg-start">
+            <h1 class="mb-1.5">Yogurt Project</h1>
+            <p class="mb-5 text-muted">
               This is my very first project with Shecodes.io. It transforms
               design using technology into digital space, combining HTML and CSS
               to deliver a visually engaging experience. The carefully selected
@@ -55,81 +57,185 @@
               an invitation to a digital adventure where technology meets
               creativity, and in every digital space unveils a new facet of our
               virtual world.
-              <br />
-              <br />
               <a
                 href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
                 target="_blank"
-                class="btn btn-branding-outline text-lg-start"
-                >Learn more</a
+                class="btn-branding-outline"
+                >Learn more >></a
               >
             </p>
           </div>
         </div>
-      </div>
-      <br />
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Hobby Page</h2>
-            <p class="mb-5 text-muted">
-              This is my very first project with Shecodes.io. It transforms
-              design using technology into digital space, combining HTML and CSS
-              to deliver a visually engaging experience. The carefully selected
-              image not only enhance the aesthetic appeal but also contribute to
-              narrate the meaning of the text. You'll find a button
-              strategically placed at the bottom of the text, beckoning you to
-              embark on a journey to another page. Clicking it will seamlessly
-              transition you to another chapter of the online story. My
-              commitment to user-friendly design is evident in every element of
-              this web page. The integration of finding a suituable image adds a
-              layer of richness to the user experience, allowing viewers to feel
-              visually satisfying. This web page is not just a destination; it's
-              an invitation to a digital adventure where technology meets
-              creativity, and in every digital space unveils a new facet of our
-              virtual world.
-            </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+        <br />
+        <br />
+
+        <div class="row mb-5">
+          <div class="col">
+            <div class="project-desciption">
+              <h1 class="mb-1.5">Hobby Page</h1>
+              <p class="mb-5 text-muted">
+                This is my very first project with Shecodes.io. It transforms
+                design using technology into digital space, combining HTML and
+                CSS to deliver a visually engaging experience. The carefully
+                selected image not only enhance the aesthetic appeal but also
+                contribute to narrate the meaning of the text. You'll find a
+                button strategically placed at the bottom of the text, beckoning
+                you to embark on a journey to another page. Clicking it will
+                seamlessly transition you to another chapter of the online
+                story. My commitment to user-friendly design is evident in every
+                element of this web page. The integration of finding a suituable
+                image adds a layer of richness to the user experience, allowing
+                viewers to feel visually satisfying. This web page is not just a
+                destination; it's an invitation to a digital adventure where
+                technology meets creativity, and in every digital space unveils
+                a new facet of our virtual world.My commitment to user-friendly
+                design is evident in every element of this web page. The
+                integration of finding a suituable image adds a layer of
+                richness to the user experience, allowing viewers to feel
+                visually satisfying. This web page is not just a destination;
+                it's an invitation to a digital adventure where technology meets
+                creativity, and in every digital space unveils a new facet of
+                our virtual world.
+
+                <a
+                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  class="btn-branding-outline mb-5"
+                >
+                  Learn more >>
+                </a>
+              </p>
+            </div>
+          </div>
+
+          <div class="col d-none d-lg-block">
+            <img
+              src="image/hobby.png"
+              class="img-thumbnail w-50 pe-auto rounded-2 mb-5"
+              alt="hobby"
+            />
           </div>
         </div>
-        <div class="col d-none d-lg-block">
-          <img
-            src="image/hobby.png"
-            class="img-fluid w-50 pe-auto rounded-2"
-            alt="hobby"
-          />
+        <br />
+        <div class="row">
+          <div class="col d-none d-lg-block">
+            <img
+              src="image/weather app.png"
+              class="img-thumbnail mt--0.5 rounded-2"
+              alt="weather App"
+            />
+          </div>
+          <div class="col">
+            <div class="project-desciption">
+              <h1 class="mb-1.5">Weather App</h1>
+              <p class="mb-5 text-muted mb-5">
+                This is my second project with Shecodes.io. It utilizes
+                JavaScript to enhance the design, adding interactivity by
+                combining HTML, CSS, and Designs. I've selected the images ,
+                they are my own, reflecting my personal hobbies as well. As you
+                hover over the pictures, they enlarge, creating an engaging
+                experience. At the bottom of the text, there's a button inviting
+                you to explore another interesting feature where i created using
+                what i learned in JavaScript, where a pop-up window awaits,
+                asking a few personal questions. My dedication to user-friendly
+                design shines through every aspect of this webpage.
+
+                <a
+                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  class="btn-branding-outline mb-5"
+                >
+                  Learn more >>
+                </a>
+              </p>
+              <br />
+              <br />
+              <br />
+              <br />
+            </div>
+          </div>
         </div>
-      </div>
-      <br />
-      <div class="row">
-        <div class="col d-none d-lg-block">
-          <img
-            src="image/weather app.png"
-            class="img-fluid w-30 pe-auto rounded-2"
-            alt="weather App"
-          />
+        <div class="row mb-5">
+          <div class="col">
+            <div class="project-desciption">
+              <h1 class="mb-1.5">World Clock</h1>
+              <p class="mb-5 text-muted">
+                This is my very first project with Shecodes.io. It transforms
+                design using technology into digital space, combining HTML and
+                CSS to deliver a visually engaging experience. The carefully
+                selected image not only enhance the aesthetic appeal but also
+                contribute to narrate the meaning of the text. You'll find a
+                button strategically placed at the bottom of the text, beckoning
+                you to embark on a journey to another page. Clicking it will
+                seamlessly transition you to another chapter of the online
+                story. My commitment to user-friendly design is evident in every
+                element of this web page. The integration of finding a suituable
+                image adds a layer of richness to the user experience, allowing
+                viewers to feel visually satisfying. This web page is not just a
+                destination; it's an invitation to a digital adventure where
+                technology meets creativity, and in every digital space unveils
+                a new facet of our virtual world.My commitment to user-friendly
+                design is evident in every element of this web page. The
+                integration of finding a suituable image adds a layer of
+                richness to the user experience, allowing viewers to feel
+                visually satisfying. This web page is not just a destination;
+                it's an invitation to a digital adventure where technology meets
+                creativity, and in every digital space unveils a new facet of
+                our virtual world.
+
+                <a
+                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  class="btn-branding-outline"
+                >
+                  Learn more >>
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
+            <img
+              src="image/world clock.png"
+              class="img-thumbnail mt--0.25 pe-auto rounded-2"
+              alt="hobby"
+            />
+          </div>
         </div>
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
-            <p class="mb-5 text-muted">
-              This is my very first project with Shecodes.io. It transforms
-              design using technology into digital space, combining HTML and CSS
-              to deliver a visually engaging experience. The carefully selected
-              image not only enhance the aesthetic appeal but also contribute to
-              narrate the meaning of the text. You'll find a button
-              strategically placed at the bottom of the text, beckoning you to
-              embark on a journey to another page. Clicking it will seamlessly
-              transition you to another chapter of the online story. My
-              commitment to user-friendly design is evident in every element of
-              this web page. The integration of finding a suituable image adds a
-              layer of richness to the user experience, allowing viewers to feel
-              visually satisfying. This web page is not just a destination; it's
-              an invitation to a digital adventure where technology meets
-              creativity, and in every digital space unveils a new facet of our
-              virtual world.
-            </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+        <br />
+
+        <div class="row">
+          <div class="col d-none d-lg-block">
+            <img
+              src="image/AI.png"
+              class="img-thumbnail mt--0.5 rounded-2"
+              alt="weather App"
+            />
+          </div>
+          <div class="col">
+            <div class="project-desciption">
+              <h1 class="mb-1.5">AI App</h1>
+              <p class="mb-5 text-muted mb-5">
+                At SheCodes.io, I have undergone comprehensive training in
+                coding, gaining a profound understanding of various concepts.
+                The platform's structured lessons are tailored to accommodate
+                individual learning preferences, allowing for an optimal
+                educational experience. The ability to revisit lessons for
+                practice has significantly contributed to my skill enhancement
+                and upskilling. The incorporation of an AI tool has added an
+                element of enjoyment to the learning process, making it both
+                engaging and instructive. As a result of my experiences at
+                SheCodes.io, I have developed a sense of proficiency in coding,
+                positioning myself as an expert in the field.
+
+                <a
+                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  class="btn-branding-outline mb-5"
+                >
+                  Learn more >>
+                </a>
+              </p>
+              <br />
+              <br />
+              <br />
+              <br />
+            </div>
           </div>
         </div>
       </div>
