--- a/projects.html
+++ b/projects.html
@@ -74,31 +74,27 @@
             <div class="project-desciption">
               <h1 class="mb-1.5">Hobby Page</h1>
               <p class="mb-5 text-muted">
-                This is my very first project with Shecodes.io. It transforms
-                design using technology into digital space, combining HTML and
-                CSS to deliver a visually engaging experience. The carefully
-                selected image not only enhance the aesthetic appeal but also
-                contribute to narrate the meaning of the text. You'll find a
-                button strategically placed at the bottom of the text, beckoning
-                you to embark on a journey to another page. Clicking it will
-                seamlessly transition you to another chapter of the online
-                story. My commitment to user-friendly design is evident in every
-                element of this web page. The integration of finding a suituable
-                image adds a layer of richness to the user experience, allowing
-                viewers to feel visually satisfying. This web page is not just a
-                destination; it's an invitation to a digital adventure where
-                technology meets creativity, and in every digital space unveils
-                a new facet of our virtual world.My commitment to user-friendly
-                design is evident in every element of this web page. The
-                integration of finding a suituable image adds a layer of
-                richness to the user experience, allowing viewers to feel
-                visually satisfying. This web page is not just a destination;
-                it's an invitation to a digital adventure where technology meets
-                creativity, and in every digital space unveils a new facet of
-                our virtual world.
+                I'm thrilled to present my second project with Shecodes.io! This
+                time, I've harnessed the power of JavaScript to breathe life
+                into the design, infusing it with interactivity alongside HTML,
+                CSS, and JavaScript. The images you'll encounter are not just
+                random selections; they mirror my personal passions and hobbies,
+                adding a touch of authenticity to the experience. Hovering over
+                these images triggers a magical transformation as they enlarge
+                before your eyes, immersing you in an unforgettable journey. But
+                wait, there's more! Beneath the captivating visuals lies a
+                hidden gem—a button beckoning you to explore an exciting feature
+                crafted with the knowledge I've gained in JavaScript. Step into
+                the realm of this feature, and a pop-up window greets you with a
+                series of personal questions, adding depth to our interaction.
+                Throughout this entire endeavor, my unwavering commitment to
+                user-friendly design remains steadfast, evident in every pixel
+                and line of code. Get ready to embark on an adventure unlike any
+                other as you delve into the captivating world of this webpage!
 
                 <a
                   href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  target="_blank"
                   class="btn-branding-outline mb-5"
                 >
                   Learn more >>
@@ -120,34 +116,42 @@
           <div class="col d-none d-lg-block">
             <img
               src="image/weather app.png"
-              class="img-thumbnail mt--0.5 rounded-2"
+              class="img-thumbnail mt-5 rounded-2"
               alt="weather App"
             />
           </div>
           <div class="col">
             <div class="project-desciption">
               <h1 class="mb-1.5">Weather App</h1>
-              <p class="mb-5 text-muted mb-5">
-                This is my second project with Shecodes.io. It utilizes
-                JavaScript to enhance the design, adding interactivity by
-                combining HTML, CSS, and Designs. I've selected the images ,
-                they are my own, reflecting my personal hobbies as well. As you
-                hover over the pictures, they enlarge, creating an engaging
-                experience. At the bottom of the text, there's a button inviting
-                you to explore another interesting feature where i created using
-                what i learned in JavaScript, where a pop-up window awaits,
-                asking a few personal questions. My dedication to user-friendly
-                design shines through every aspect of this webpage.
+              <p class="mb-5 text-muted">
+                I'm thrilled to share my third project! Welcome to the world
+                weather temperature search engine, a culmination of my
+                exploration into the vast realm of web development. Throughout
+                this endeavor, I've delved deep into the intricate workings of
+                JavaScript, particularly honing my skills in utilizing Functions
+                to their fullest potential. From manipulating numbers to
+                crafting intricate calculations, from mastering positioning to
+                perfecting spacing, every aspect of this project has been a
+                learning adventure. One of the invaluable lessons I've gleaned
+                is the power of GitHub, a tool that not only helps me trace
+                every line of sourcecode I write but also provides a secure
+                haven to store my creations, ensuring they're never lost to the
+                digital abyss. The interface I've meticulously designed is
+                simple, yet elegantly clean and neat—a reflection of my own
+                personality and design philosophy. Using the search engine is as
+                effortless as can be. Just enter the name of the city you wish
+                to explore, and presto! The temperature is right at your
+                fingertips, making it a breeze to stay informed about weather
+                conditions around the globe.
 
                 <a
                   href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  target="_blank"
                   class="btn-branding-outline mb-5"
                 >
                   Learn more >>
                 </a>
               </p>
-              <br />
-              <br />
               <br />
               <br />
             </div>
@@ -158,31 +162,25 @@
             <div class="project-desciption">
               <h1 class="mb-1.5">World Clock</h1>
               <p class="mb-5 text-muted">
-                This is my very first project with Shecodes.io. It transforms
-                design using technology into digital space, combining HTML and
-                CSS to deliver a visually engaging experience. The carefully
-                selected image not only enhance the aesthetic appeal but also
-                contribute to narrate the meaning of the text. You'll find a
-                button strategically placed at the bottom of the text, beckoning
-                you to embark on a journey to another page. Clicking it will
-                seamlessly transition you to another chapter of the online
-                story. My commitment to user-friendly design is evident in every
-                element of this web page. The integration of finding a suituable
-                image adds a layer of richness to the user experience, allowing
-                viewers to feel visually satisfying. This web page is not just a
-                destination; it's an invitation to a digital adventure where
-                technology meets creativity, and in every digital space unveils
-                a new facet of our virtual world.My commitment to user-friendly
-                design is evident in every element of this web page. The
-                integration of finding a suituable image adds a layer of
-                richness to the user experience, allowing viewers to feel
-                visually satisfying. This web page is not just a destination;
-                it's an invitation to a digital adventure where technology meets
-                creativity, and in every digital space unveils a new facet of
-                our virtual world.
-
+                I am thrilled to unveil my fourth project, a testament to my
+                relentless pursuit of innovation in the realm of web
+                development! Step into the world of the world clock search
+                engine, where every click opens up a new vista of possibility.
+                Once again, I've immersed myself in the intricate depths of
+                JavaScript, honing my skills and pushing the boundaries of
+                what's possible. From the delicate art of manipulating numbers
+                to the precise craftsmanship of intricate calculations, from the
+                nuanced mastery of positioning to the meticulous attention to
+                spacing, every facet of this project has been a voyage of
+                discovery. JavaScript has presented its challenges, yet with
+                each hurdle overcome, I've emerged stronger and more adept than
+                before. Using the search engine is a seamless experience,
+                designed to empower users with effortless access to global time
+                and dates. Simply input the name of the city you wish to
+                explore.
                 <a
                   href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                  target="_blank"
                   class="btn-branding-outline"
                 >
                   Learn more >>
@@ -200,7 +198,7 @@
         </div>
         <br />
 
-        <div class="row">
+        <div class="row mt-5">
           <div class="col d-none d-lg-block">
             <img
               src="image/AI.png"
@@ -211,30 +209,32 @@
           <div class="col">
             <div class="project-desciption">
               <h1 class="mb-1.5">AI App</h1>
-              <p class="mb-5 text-muted mb-5">
-                At SheCodes.io, I have undergone comprehensive training in
-                coding, gaining a profound understanding of various concepts.
-                The platform's structured lessons are tailored to accommodate
-                individual learning preferences, allowing for an optimal
-                educational experience. The ability to revisit lessons for
-                practice has significantly contributed to my skill enhancement
-                and upskilling. The incorporation of an AI tool has added an
-                element of enjoyment to the learning process, making it both
-                engaging and instructive. As a result of my experiences at
-                SheCodes.io, I have developed a sense of proficiency in coding,
-                positioning myself as an expert in the field.
+              <p class="mb-5 text-muted">
+                I'm thrilled to present my latest endeavor—a cutting-edge
+                project leveraging the power of AI to revolutionize the search
+                engine experience! Through rigorous training and relentless
+                dedication to mastering coding, I've cultivated a deep
+                understanding of diverse concepts that form the backbone of this
+                innovative creation. Integrating an AI tool into the development
+                process has transformed learning into a dynamic and enjoyable
+                journey, infusing every step with excitement and insight. The
+                synergy between human ingenuity and artificial intelligence has
+                propelled my coding skills to new heights, imbuing me with a
+                profound sense of proficiency and expertise in the field. But
+                this is just the beginning! With each milestone achieved, I'm
+                propelled forward, driven by an insatiable thirst for innovation
+                and discovery. Stay tuned as I continue to push the boundaries
+                of what's possible, shaping the future of technology one line of
+                code at a time. Exciting developments await!
 
                 <a
                   href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                  class="btn-branding-outline mb-5"
+                  target="_blank"
+                  class="btn-branding-outline"
                 >
                   Learn more >>
                 </a>
               </p>
-              <br />
-              <br />
-              <br />
-              <br />
             </div>
           </div>
         </div>
