changes to project links

--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,31 @@
         <div class="col-sm-7">
           <h1>Josephine Jacobs</h1>
           <h2>Frontend developer based in Frankfurt, Germany</h2>
-          <p>Contact me</p>
+          <br />
+
+          <h2>Email</h2>
+          <br />
+          <p>
+            <a
+              href="mailto:josephine_jacobs_lim@gmail.com"
+              class="btn-branding-outline"
+              >josephine_jacobs_lim@gmail.com
+            </a>
+          </p>
+          <br />
+
+          <h2>Linkedin account</h2>
+          <br />
+          <p>
+            <a
+              href="https://www.linkedin.com/in/josephine-jacobs-22704f/"
+              target="_blank"
+              class="btn-branding-outline"
+              >linkedin-josephine-jacobs-22704f/</a
+            >
+          </p>
         </div>
       </div>
-    </div>
-    <div class="d-grid gap-4 d-md-flex justify-content-md-center">
-      <a href="projects.html" class="btn btn-outline-dark btn-sm">Projects</a>
-      <a href="contact.html" class="btn btn-outline-dark btn-sm">Contact me</a>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
