--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,10 @@
           <br />
         </div>
         <div class="col">
-          <div class="project-desciption">
+          <div class="project-desciption p-2">
             <h1 class="mb-1.5">Yogurt Project</h1>
-            <p class="mb-5 text-muted">
+            <h2>Created using HTML, CSS, JavaScript</h2>
+            <p class="mb-1 text-muted">
               This is my very first project with Shecodes.io. It transforms
               design using technology into digital space, combining HTML and CSS
               to deliver a visually engaging experience. The carefully selected
@@ -57,13 +58,13 @@
               an invitation to a digital adventure where technology meets
               creativity, and in every digital space unveils a new facet of our
               virtual world.
-              <a
-                href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                target="_blank"
-                class="btn-branding-outline"
-                >Learn more >></a
-              >
             </p>
+            <a
+              href="https://www.shecodes.io/cohorts/shecodes-basics-5b38d246-f8e2-4542-84f7-85284ea83257/projects/1655931"
+              target="_blank"
+              class="mb-5 btn-branding-outline"
+              >View project >></a
+            >
           </div>
         </div>
         <br />
@@ -71,9 +72,10 @@
 
         <div class="row mb-5">
           <div class="col">
-            <div class="project-desciption">
+            <div class="project-desciption p-2">
               <h1 class="mb-1.5">Hobby Page</h1>
-              <p class="mb-5 text-muted">
+              <h2>Styling using HTML, CSS, JavaScript</h2>
+              <p class="mb-1 text-muted">
                 I'm thrilled to present my second project with Shecodes.io! This
                 time, I've harnessed the power of JavaScript to breathe life
                 into the design, infusing it with interactivity alongside HTML,
@@ -91,22 +93,21 @@
                 user-friendly design remains steadfast, evident in every pixel
                 and line of code. Get ready to embark on an adventure unlike any
                 other as you delve into the captivating world of this webpage!
-
-                <a
-                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                  target="_blank"
-                  class="btn-branding-outline mb-5"
-                >
-                  Learn more >>
-                </a>
               </p>
+              <a
+                href="https://www.shecodes.io/cohorts/shecodes-basics-add-on-2c7defe2-7654-48da-b921-aa43bcc89a7d/projects/1662269"
+                target="_blank"
+                class="mb-5 btn-branding-outline"
+              >
+                View project >>
+              </a>
             </div>
           </div>
 
           <div class="col d-none d-lg-block">
             <img
               src="image/hobby.png"
-              class="img-thumbnail w-50 pe-auto rounded-2 mb-5"
+              class="img-thumbnail w-50 pe-auto rounded-2 mt-2 mb-3"
               alt="hobby"
             />
           </div>
@@ -116,52 +117,48 @@
           <div class="col d-none d-lg-block">
             <img
               src="image/weather app.png"
-              class="img-thumbnail mt-5 rounded-2"
+              class="img-thumbnail mt-5 mb-5 rounded-2"
               alt="weather App"
             />
           </div>
           <div class="col">
-            <div class="project-desciption">
-              <h1 class="mb-1.5">Weather App</h1>
-              <p class="mb-5 text-muted">
+            <div class="project-desciption p-2">
+              <h1 class="mb-1.5 mt-1">Weather App</h1>
+              <h2>Created using Vanilla Weather Search and API</h2>
+              <p class="mb-1 text-muted">
                 I'm thrilled to share my third project! Welcome to the world
                 weather temperature search engine, a culmination of my
                 exploration into the vast realm of web development. Throughout
                 this endeavor, I've delved deep into the intricate workings of
-                JavaScript, particularly honing my skills in utilizing Functions
-                to their fullest potential. From manipulating numbers to
-                crafting intricate calculations, from mastering positioning to
-                perfecting spacing, every aspect of this project has been a
-                learning adventure. One of the invaluable lessons I've gleaned
+                JavaScript, particularly honing my skills in JS Functions. From
+                manipulating JS Dates and Selectors, to understanding Weather
+                API, from understanding every aspects of Vanilla Weather Search
+                to creating a weather App, every aspect of this project has been
+                a learning adventure. One of the invaluable lessons I've gleaned
                 is the power of GitHub, a tool that not only helps me trace
                 every line of sourcecode I write but also provides a secure
                 haven to store my creations, ensuring they're never lost to the
                 digital abyss. The interface I've meticulously designed is
                 simple, yet elegantly clean and neat—a reflection of my own
-                personality and design philosophy. Using the search engine is as
-                effortless as can be. Just enter the name of the city you wish
-                to explore, and presto! The temperature is right at your
-                fingertips, making it a breeze to stay informed about weather
-                conditions around the globe.
-
-                <a
-                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                  target="_blank"
-                  class="btn-branding-outline mb-5"
-                >
-                  Learn more >>
-                </a>
+                personality and design philosophy.
               </p>
-              <br />
-              <br />
+              <a
+                href="https://www.shecodes.io/cohorts/shecodes-plus-fb874af3-d1b7-4b8a-ab06-54eb88f66793/projects/1829321"
+                target="_blank"
+                class="mb-5 btn-branding-outline"
+              >
+                View project >>
+              </a>
             </div>
           </div>
         </div>
-        <div class="row mb-5">
+        <br />
+        <div class="row">
           <div class="col">
-            <div class="project-desciption">
-              <h1 class="mb-1.5">World Clock</h1>
-              <p class="mb-5 text-muted">
+            <div class="project-desciption p-2">
+              <h1 class="mb-1.5 mt-5">World Clock</h1>
+              <h2>customsing dropdown using JavaScript</h2>
+              <p class="mb-1 text-muted">
                 I am thrilled to unveil my fourth project, a testament to my
                 relentless pursuit of innovation in the realm of web
                 development! Step into the world of the world clock search
@@ -178,38 +175,39 @@
                 designed to empower users with effortless access to global time
                 and dates. Simply input the name of the city you wish to
                 explore.
-                <a
-                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                  target="_blank"
-                  class="btn-branding-outline"
-                >
-                  Learn more >>
-                </a>
               </p>
+              <a
+                href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-46913f34-7b6d-4fd7-a11f-a63b9649c2f2/projects/1846646"
+                target="_blank"
+                class="mt-5 btn-branding-outline"
+              >
+                View project >>
+              </a>
             </div>
           </div>
           <div class="col d-none d-lg-block">
             <img
               src="image/world clock.png"
-              class="img-thumbnail mt--0.25 pe-auto rounded-2"
+              class="img-thumbnail mt-5 pe-auto rounded-2"
               alt="hobby"
             />
           </div>
         </div>
+        <br />
         <br />
 
         <div class="row mt-5">
           <div class="col d-none d-lg-block">
             <img
               src="image/AI.png"
-              class="img-thumbnail mt--0.5 rounded-2"
+              class="img-thumbnail mt-5 rounded-2"
               alt="weather App"
             />
           </div>
           <div class="col">
             <div class="project-desciption">
-              <h1 class="mb-1.5">AI App</h1>
-              <p class="mb-5 text-muted">
+              <h1 class="mb-1.5 mt-5">AI App</h1>
+              <p class="mb-1 text-muted">
                 I'm thrilled to present my latest endeavor—a cutting-edge
                 project leveraging the power of AI to revolutionize the search
                 engine experience! Through rigorous training and relentless
@@ -226,15 +224,14 @@
                 and discovery. Stay tuned as I continue to push the boundaries
                 of what's possible, shaping the future of technology one line of
                 code at a time. Exciting developments await!
-
-                <a
-                  href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
-                  target="_blank"
-                  class="btn-branding-outline"
-                >
-                  Learn more >>
-                </a>
               </p>
+              <a
+                href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-de735e11-fe26-426a-917f-6dd7d56cc98d/projects/2064327"
+                target="_blank"
+                class="mb-5 btn-branding-outline"
+              >
+                View project >>
+              </a>
             </div>
           </div>
         </div>
@@ -264,7 +261,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
